fix: fix sticky headre flickering issue

--- a/packages/frontend/src/app/(sticky-header)/layout.scss
+++ b/packages/frontend/src/app/(sticky-header)/layout.scss
@@ -9,4 +9,5 @@
 .main-content {
   display: flex;
   flex-grow: 1;
+  margin-top: 62px;
 }
