--- a/packages/frontend/src/app/components/header.scss
+++ b/packages/frontend/src/app/components/header.scss
@@ -3,10 +3,10 @@
     display: none;
   }
 
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 999;
   background-color: white;
